--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-custom-alert": "^1.0.4",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
