--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.5"
