--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-custom-alert": "^1.0.4",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
@@ -16,6 +18,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
+    "react-youtube": "^10.1.0",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.5"
