--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
+    "react-table": "^7.8.0",
     "react-youtube": "^10.1.0",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4",
