--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
+    "react-error-overlay": "6.0.9",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
