--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-custom-alert": "^1.0.4",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-error-overlay": "6.0.9",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
-    "react-error-overlay": "6.0.9",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "react-youtube": "^10.1.0",
     "recharts": "^2.12.7",
+    "remixicon": "^4.3.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.5"
   },
