--- a/appspec.yml
+++ b/appspec.yml
@@ -12,6 +12,10 @@ permissions:
     mode: 755
 hooks:
   AfterInstall:
-    - location: deploy.sh
+    - location: /home/ubuntu/hanaTax-Frontend/deploy.sh
       timeout: 60
-      runas: root
+      runas: ubuntu
+  ApplicationStart:
+    - location: /home/ubuntu/hanaTax-Frontend/start.sh
+      timeout: 60
+      runas: ubuntu
