--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,7 @@ files:
   - source: /
     destination: /home/ubuntu/hanaTax-Frontend
     overwrite: yes
+file_exists_behavior: OVERWRITE
 permissions:
   - object: /home/ubuntu/hanaTax-Frontend
     owner: ubuntu
